更新控制器

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
 			<artifactId>druid</artifactId>
 			<version>1.0.5</version>
 		</dependency>
+
+		<!--apache http client-->
+		<!-- https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient -->
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
